--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit == 1.15.2
+streamlit == 1.16.0
 streamlit-folium == 0.8.1
 plotly == 5.11.0
+plotly-express == 0.4.1
 pandas == 1.5.1
 matplotlib == 3.6.2
 matplotlib-inline == 0.1.6
