--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-streamlit==1.15.1
-streamlit-folium==0.7.0
-plotly==15.10.0
-pandas==1.4.3
-matplotlib==3.5.3
-matplotlib-inline==0.1.6
-numpy==1.23.1
-folium==0.13.0
-haversine==2.7.0
-Pillow==9.2.0
+streamlit == 1.16.0
+streamlit-folium == 0.8.1
+plotly == 5.11.0
+plotly-express == 0.4.1
+pandas == 1.5.1
+matplotlib == 3.6.2
+matplotlib-inline == 0.1.6
+numpy == 1.23.4
+folium == 0.14.0
+haversine == 2.7.0
+Pillow == 9.2.0
